# NVIGI-Plugins

./: .gitattributes  .gitignore  3rd-party-licenses.md  LICENSE.txt  NOTICE.txt  README.md  build.bat  copy_3rd_party.bat  copy_3rd_party_win_x64.bat  copy_sdk_binaries.bat  dll-info.txt  manifest.json  manifest.txt  premake.lua  project.xml  setup.bat
_artifacts/: gitVersion.h
data/nvigi.models/nvigi.plugin.asr.ggml/{5CAD3A03-1272-4D43-9F3D-655417526170}/: download.bat  nvigi.model.config.json
data/nvigi.models/nvigi.plugin.embed.ggml/{5D458A64-C62E-4A9C-9086-2ADBF6B241C7}/: download.bat  nvigi.model.config.json
data/nvigi.models/nvigi.plugin.gpt.ggml/{01F43B70-CE23-42CA-9606-74E80C5ED0B6}/: download.bat  nvigi.model.config.json
data/nvigi.models/nvigi.plugin.gpt.ggml/{0BAEDD5C-F2CA-49AA-9892-621C40030D12}/: README.txt  nvigi.model.config.json
data/nvigi.models/nvigi.plugin.gpt.ggml/{0BAEDD5C-F2CA-49AA-9892-621C40030D13}/: README.txt  nvigi.model.config.json
data/nvigi.models/nvigi.plugin.gpt.ggml/{8E31808B-C182-4016-9ED8-64804FF5B40D}/: download.bat  nvigi.model.config.json
data/nvigi.models/nvigi.plugin.tts.asqflow-ggml/{90D81B98-0954-4D64-B901-B4F7A3189DEC}/: nvigi.model.config.json
data/nvigi.models/nvigi.plugin.tts.asqflow-trt/{81320D1D-DF3C-4CFC-B9FA-4D3FF95FC35F}/: nvigi.model.config.json
data/nvigi.models/nvigi.plugin.tts.asqflow/{81320D1D-DF3C-4CFC-B9FA-4D3FF95FC35F}/: download.bat  nvigi.model.config.json
data/nvigi.test/nvigi.codeagentlua/: codeagent_prompt_lua.txt
data/nvigi.test/nvigi.tts/asqflow/mel_spectrograms_targets/: transcripts.json
docs/: CustomizingPlugins.md  FirstSteps.md  GettingStarted.md  Introduction.md  NVIGIDeveloperPack.md  Plugins.md  ProgrammingGuideASRWhisper.md  ProgrammingGuideEmbed.md  ProgrammingGuideGPT.md  ProgrammingGuideTTSASqFlow.md  ReleaseNotes.md  Samples.md  Samples3D.md  SamplesBasic.md  SamplesBasicCxxASR.md  SamplesBasicCxxGPT.md  SamplesBasicCxxTTS.md  SamplesCodeAgentLua.md  SamplesFcall.md  SamplesPipeline.md  SamplesRAG.md  SamplesReload.md  SourceBuild.md
premake/: premake.cuda_utils.lua  premake.shared_config.lua  premake.shared_plugin.lua  premake.utils.lua
source/plugins/nvigi.aip/: aipEntry.cpp  nvigi_aip.h  package.py  plugin.rc  premake.lua  resource.h  versions.h
source/plugins/nvigi.asr/: nvigi_asr_whisper.h
source/plugins/nvigi.asr/ggml/: nvcf.h  package.py  plugin.rc  premake.lua  resource.h  stt.cpp  stt.h  versions.h
source/plugins/nvigi.embed/: nvigi_embed.h
source/plugins/nvigi.embed/ggml/: embed.cpp  embed.h  package.py  plugin.rc  premake.lua  resource.h  versions.h
source/plugins/nvigi.gpt/: nvigi_gpt.h
source/plugins/nvigi.gpt/ggml/: gpt.cpp  gpt.h  nvcf.h  package.py  plugin.rc  premake.lua  resource.h  versions.h
source/plugins/nvigi.gpt/onnxgenai/: chat_history.h  onnxgenai_dml.cpp  onnxgenai_dml.h  premake.lua  resource.h  versions.h
source/plugins/nvigi.gpt/rest/: gpt.cpp  gpt.h  package.py  plugin.rc  premake.lua  resource.h  versions.h
source/plugins/nvigi.net/: net.cpp  net.h  netEntry.cpp  nvigi_net.h  premake.lua  resource.h
source/plugins/nvigi.tts/: nvigi_tts.h
source/plugins/nvigi.tts/asqflow/: asqflow.cpp  asqflow.h  asqflow_inference.cpp  asqflow_inference.h  language_normalizer.cpp  language_normalizer.h  plugin.rc  premake.lua  resource.h  symbols.h  versions.h
source/plugins/nvigi.tts/asqflow/external_trt/: README.md  TRTModel.h  TRTTensor.h
source/plugins/nvigi.tts/asqflow/ggml/: package.py  plugin.rc  premake.lua  resource.h  tts.cpp  tts.h  versions.h
source/plugins/nvigi.tts/asqflow/trt/: asqflow.cpp  asqflow.h  asqflow_inference.cpp  package.py  (+8 more)
source/samples/nvigi.3d/: .gitattributes  .gitignore  package.py  premake.lua
source/samples/nvigi.3d/opt-local-donut/: .gitignore  01_pull.bat  02_setup.bat  03_build.bat  CMakeLists.txt
source/samples/nvigi.3d/src/: NVIGISample.cpp  NVIGISample.h  RenderTargets.h  UIData.h  UIRenderer.h  main.cpp
source/samples/nvigi.basic/: basic.cpp  package.py  premake.lua
source/samples/nvigi.basic.cxx/: clparser.hpp  core.hpp  d3d12.hpp  vulkan.hpp
source/samples/nvigi.basic.cxx/asr/: asr.hpp  audio.hpp  basic_asr.cpp  package.py  premake.lua
source/samples/nvigi.basic.cxx/gpt/: basic_gpt.cpp  cloud_test.json  gpt.hpp  package.py  premake.lua
source/samples/nvigi.basic.cxx/tts/: basic_tts.cpp  package.py  premake.lua  tts.hpp
source/samples/nvigi.codeagentlua/src/: game.cpp  game.h  llm.cpp  llm.h  lua_bindings.cpp  lua_bindings.h  main.cpp  package.py  premake.lua  render.cpp  render.h
source/samples/nvigi.fcall/: fcall.cpp  package.py  premake.lua
source/samples/nvigi.pipeline/: package.py  pipeline.cpp  premake.lua
source/samples/nvigi.rag/: package.py  premake.lua  rag.cpp
source/samples/nvigi.reload/: d3d12.h  package.py  premake.lua  reload.cpp
source/samples/shared/cxx_wrappers/: README.md  clparser.hpp  core.hpp  d3d12.hpp  io_helpers.hpp  vulkan.hpp
source/shared/: sharedVersions.h
tools/: project.tools.xml
tools/packman/: config.packman.xml
(+10 files in other folders)
